syntax = "proto3";

package pb;

option go_package = "github.com/siddheshRajendraNimbalkar/collage-prject-backend/pb";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  string organization_name = 5;
  string created_at = 6;
  string user_image = 7; 
}

message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4;  
  string organization_name = 5;
  string user_image = 6; 
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  string expire_access_token = 3;
  string expire_refresh_token = 4;
  User user = 5;
}

message RefreshTokenResponse {
  string access_token = 1;
  string expire_access_token = 2;
}

message GetUserRequest {
}

message GetUserByEmailRequest {
  string email = 1;
}

message UserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  string organization_name = 5;
  string user_image = 6; 
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  string message = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}
